Project 2 Step 3: Update and Delete functional, validation and error handling implemented
